index.html acabado

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
     <title>Document</title>
 </head>
 <body>
@@ -88,14 +90,31 @@
     <section class="testimonial">
 
         <div class="testimonialContainer">
+            <div class="memojis">
+                <div class="memoji1"><img src="/project-assets/testimonial-section/memoji-1.png" alt=""></div>
+                <div class="memoji2"><img src="/project-assets/testimonial-section/memoji-2.png" alt=""></div>
+                <div class="memoji3"><img src="/project-assets/testimonial-section/memoji-3.png" alt=""></div>
+                <div class="memoji4"><img src="/project-assets/testimonial-section/memoji-4.png" alt=""></div>
+                <div class="memojisTextContainer">
+                    <div class="memojisTextContent">
+                        <h3 style="color:#FFF">Hear What Our Clients Have to Say</h3>
+                        <p class="circle">“Circle helped us through every stage of our startup. We really enjoyed working with you.”</p>
+                        <div class="profilePic">
+                            <img src="/project-assets/testimonial-section/profile.png" alt=""> 
+                            <div class="profileText">
+                                <p class="nombre">Kristin Watson</p>
+                                <p class="booking">Booking.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
-
-
     </section>
 
-    
+
     <section class="services">
         <div class="ourServices">
             <h3>Our Services</h3>
@@ -128,11 +147,49 @@
                 </div>
             </div>
         </div>
-           
+    </section>
+
+
+    <section class="newsLetter">
+        <div class="yellowAreaContainer">
+            <div class="yellowAreaText">
+                        <h3>Do you have any questions?</h3>
+                        <p>Let us help you!</p>
+                        <div class="yellowBotones">
+                            <div class="espacioEmail">
+                                <img src="/project-assets/newsletter/icon/mail.svg"></img>
+                                <input type="email" placeholder="Enter your email.">
+                            </div>
+                            <button>Suscribe</button>
+                        </div>               
+            </div>
+        </div>
     </section>
 
 
 
+    <footer>
+        <div class="footerContainer">
+            <div class="footerLeft">
+                <img src="/project-assets//logos/circle.svg" alt="Image not found.">
+                <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+            </div>
+            <div class="footerRight">
+                <div class="footerColumn">
+                    <a href="">linkTop</a>
+                    <a href="">linkBottom</a>
+                </div>
+                <div class="footerColumn">
+                    <a href="">linkTop</a>
+                    <a href="">linkBottom</a>
+                </div>
+                <div class="footerColumn">
+                    <a href="">linkTop</a>
+                    <a href="">linkBottom</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
