--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
-
 
     <nav>
         <div class="navContainer">
             <div class="navLeft"> <img src="/project-assets//logos/circle.svg" alt="Image not found."></div>
-            <div class="navMiddle"><p>Home</p><p>Projects</p><p>Services</p></div>
-            <div class="navRight"> <button>Contact Us</button></div>
+            <div class="navMiddle"><a href="/index.html">Home</a><a href="/project.html">Projects</a><a>Services</a></div>
+            <div class="navRight"> <button> <a href="/contact.html">Contact Us</a></button></div>
         </div>
     </nav>
 
@@ -153,15 +151,15 @@
     <section class="newsLetter">
         <div class="yellowAreaContainer">
             <div class="yellowAreaText">
-                        <h3>Do you have any questions?</h3>
-                        <p>Let us help you!</p>
-                        <div class="yellowBotones">
-                            <div class="espacioEmail">
-                                <img src="/project-assets/newsletter/icon/mail.svg"></img>
-                                <input type="email" placeholder="Enter your email.">
-                            </div>
-                            <button>Suscribe</button>
-                        </div>               
+                <h3>Do you have any questions?</h3>
+                <p>Let us help you!</p>
+                <div class="yellowBotones">
+                    <div class="espacioEmail">
+                        <img src="/project-assets/newsletter/icon/mail.svg"></img>
+                        <input type="email" placeholder="Enter your email.">
+                    </div>
+                    <button>Suscribe</button>
+                </div>               
             </div>
         </div>
     </section>
@@ -176,16 +174,16 @@
             </div>
             <div class="footerRight">
                 <div class="footerColumn">
-                    <a href="">linkTop</a>
-                    <a href="">linkBottom</a>
+                    <a href="">Team</a>
+                    <a href="">Press</a>
                 </div>
                 <div class="footerColumn">
-                    <a href="">linkTop</a>
-                    <a href="">linkBottom</a>
+                    <a href="">Services</a>
+                    <a href="">Projects</a>
                 </div>
                 <div class="footerColumn">
-                    <a href="">linkTop</a>
-                    <a href="">linkBottom</a>
+                    <a href="">About Us</a>
+                    <a href="">Privacy Policy</a>
                 </div>
             </div>
         </div>
