html y css acabados. falta responsive y js

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,37 @@
 
 
 
+    <section class="contacto">
+        <div class="contactUs">
+            <h1>Contact Us</h1>
+        </div>
+
+        <form class="formulario">
+            <div class="formNombre fila">
+                <label>Full Name*</label><br>
+                <input type="text" placeholder="Enter your full name"><br>
+            </div>
+            <div class="formMailPhone">
+                <div class="formMail fila">
+                    <label>Email</label><br>
+                    <input type="email" placeholder="Enter your email address">
+                </div>
+                <div class="formPhone fila">
+                    <label>Phone</label><br>
+                    <input type="email" placeholder="Enter your phone number">
+                </div>
+            </div>
+            <div class="formMessage fila">
+                <label>Message</label><br>
+                <input type="email" placeholder="Write your message here ....">
+            </div>
+        </form>
+        
+    </section>
+    <button>Submit</button>
+
+
+
 
 
 
