--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <nav>
         <div class="navContainer">
             <div class="navLeft"> <img src="/project-assets//logos/circle.svg" alt="Image not found."></div>
-            <div class="navMiddle"><a href="/index.html">Home</a><a href="/project.html">Projects</a><a>Services</a></div>
+            <div class="navMiddle">
+                <a href="/index.html">Home</a>
+                <a href="/project.html">Projects</a>
+                <a>Services</a>
+            </div>
             <div class="navRight"> <button> <a href="/contact.html">Contact Us</a></button></div>
         </div>
     </nav>
@@ -25,7 +29,15 @@
             <div class="landingLeft">
                 <h1>Empower Your Business With Stunning Design!</h1>
                 <p>Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.</p>
-                <div class="landinLeftBoton"><button class="botonNormal">Get in touch</button> <button class="botonIncolor">See our work</button></div>
+                <div class="landingLeftBoton">
+                    <div class="boton">
+                        <button class="botonNormal">Get in touch</button> 
+
+                    </div>
+                    <div class="boton">
+                    <button class="botonIncolor">See our work</button>
+                    </div>
+                </div>
 
             </div>
             <div class="landingRight">
