--- a/project.html
+++ b/project.html
@@ -30,7 +30,6 @@
         </div>
 
         <div class="simplifyCenter">
-
             <img src="/project-assets/projects-section/5.jpg" alt="">
             <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis cillum minim tempor enim.
             </p>
@@ -39,25 +38,25 @@
     </section>
 
 
-    <section class="projects">
-        <div class="recentProjects">
+    <section class="otherProjects">
+        <div class="otherRecentProjects">
             <h3>Other Projects</h3>
-            <div class="projectRow">
-                <div class="projectColumn">
+            <div class="otherProjectRow">
+                <div class="otherProjectColumn">
                 <img src="/project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
                 <a href="link">Learn more</a>
             </div>
 
-            <div class="projectColumn">
+            <div class="otherProjectColumn">
                 <img src="/project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
                 <a href="link">Learn more</a>
             </div>
 
-            <div class="projectColumn">
+            <div class="otherProjectColumn">
                 <img src="/project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
