responsive acabado, solo falta menu hamburguesa y js

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <img src="/project-assets/services-section/icons/3.svg" alt="">
                     </div>
                 <h4>Title</h4>
-                <p>DescriptionDescriptionDescriptionDescription</p>
+                <p>Description</p>
                 <a href="link">Learn more</a>
                 </div>
             </div>
