correccion contacto responsive

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             </div>
         </form>
 
-        <button class="botonFinal">Submit</button>
+        <button class="botonFinal fila">Submit</button>
         
     </section>
 
