--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
     <title>Home</title>
 </head>
 <body>
+    <header>
+    <nav class="menu">
+        <img src="/project-assets//logos/circle.svg" alt="Image not found.">
+        <ul class="menu_items">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/project.html">Projects</a></li>
+            <li><a href="">Services</a></li>
+            <li class="botonContacto1"><a href="/contact.html">Contact Us</a></li>
+        </ul>
+        <button class="botonContacto"> <a href="/contact.html">Contact Us</a></button>
+        <span class="btn_menu">
+            <i class="fa fa-bars"></i>
+        </span>
+    </nav>
+    </header>
 
-    <nav>
+    <!-- <nav>
         <div class="navContainer">
             <div class="navLeft"> <img src="/project-assets//logos/circle.svg" alt="Image not found."></div>
             <div class="navMiddle">
                 <a href="/index.html">Home</a>
                 <a href="/project.html">Projects</a>
-                <a>Services</a>
+                <a href="">Services</a>
             </div>
             <div class="navRight"> <button> <a href="/contact.html">Contact Us</a></button></div>
         </div>
-    </nav>
+    </nav> -->
 
 
 
@@ -71,26 +87,26 @@
         <div class="recentProjects">
             <h3>Recent Projects</h3>
             <div class="projectRow">
-                <div class="projectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
-                <h4>Title</h4>
-                <p>Description</p>
-                <a href="link">Learn more</a>
-            </div>
+                <div class="projectColumn columna1">
+                    <!-- <img src="/project-assets/projects-section/1.jpg" alt="">
+                    <h4>Title</h4>
+                    <p>Description</p>
+                    <a href="link">Learn more</a> -->
+                </div>
 
-            <div class="projectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
-                <h4>Title</h4>
-                <p>Description</p>
-                <a href="link">Learn more</a>
-            </div>
+                <div class="projectColumn columna2">
+                    <!-- <img src="/project-assets/projects-section/1.jpg" alt="">
+                    <h4>Title</h4>
+                    <p>Description</p>
+                    <a href="link">Learn more</a> -->
+                </div>
 
-            <div class="projectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
-                <h4>Title</h4>
-                <p>Description</p>
-                <a href="link">Learn more</a>
-            </div>
+                <div class="projectColumn columna3">
+                    <!-- <img src="/project-assets/projects-section/1.jpg" alt="">
+                    <h4>Title</h4>
+                    <p>Description</p>
+                    <a href="link">Learn more</a> -->
+                </div>
             </div>
            
         </div>
@@ -135,7 +151,7 @@
                     </div>
                 <h4>Title</h4>
                 <p>Description</p>
-                <a href="link">Learn more</a>
+                <a href="">Learn more</a>
                 </div>
 
                 <div class="servicesColumn">
@@ -144,7 +160,7 @@
                     </div>
                 <h4>Title</h4>
                 <p>Description</p>
-                <a href="link">Learn more</a>
+                <a href="">Learn more</a>
                 </div>
 
                 <div class="servicesColumn">
@@ -153,7 +169,7 @@
                     </div>
                 <h4>Title</h4>
                 <p>Description</p>
-                <a href="link">Learn more</a>
+                <a href="">Learn more</a>
                 </div>
             </div>
         </div>
