--- a/contact.html
+++ b/contact.html
@@ -25,45 +25,34 @@
             <h1>Contact Us</h1>
         </div>
 
-        <form class="formulario">
+
+        <form class="formulario" onsubmit="return false">
             <div class="formNombre fila">
                 <label>Full Name*</label><br>
-                <input type="text" placeholder="Enter your full name"><br>
+                <input id="name" type="text" placeholder="Enter your full name"><br>
             </div>
             <div class="formMailPhone">
                 <div class="formMail fila">
                     <label>Email</label><br>
-                    <input type="email" placeholder="Enter your email address">
+                    <input id="email" type="email" placeholder="Enter your email address">
                 </div>
                 <div class="formPhone fila">
                     <label>Phone</label><br>
-                    <input type="email" placeholder="Enter your phone number">
+                    <input id="tel" type="tel" placeholder="Enter your phone number">
                 </div>
             </div>
             <div class="formMessage fila">
                 <label>Message</label><br>
-                <input type="email" placeholder="Write your message here ....">
+                <input id="message" type="text" placeholder="Write your message here ....">
             </div>
+
+            <button id="subm" class="botonFinal fila">Submit</button>
+
         </form>
 
-        <button class="botonFinal fila">Submit</button>
+
         
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <footer>
@@ -89,5 +78,7 @@
         </div>
     </footer>
     
+
+    <script src="/javascript/contact.js"></script>
 </body>
 </html>
