--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 
     <title>Projects</title>
 </head>
@@ -12,9 +12,9 @@
 
     <nav>
         <div class="navContainer">
-            <div class="navLeft"> <img src="/project-assets//logos/circle.svg" alt="Image not found."></div>
-            <div class="navMiddle"><a href="/index.html">Home</a><a href="/project.html">Projects</a><a>Services</a></div>
-            <div class="navRight"> <button> <a href="/contact.html">Contact Us</a></button></div>
+            <div class="navLeft"> <img src="./project-assets//logos/circle.svg" alt="Image not found."></div>
+            <div class="navMiddle"><a href="./index.html">Home</a><a href="./project.html">Projects</a><a>Services</a></div>
+            <div class="navRight"> <button> <a href="./contact.html">Contact Us</a></button></div>
         </div>
     </nav>
 
@@ -30,7 +30,7 @@
         </div>
 
         <div class="simplifyCenter">
-            <img src="/project-assets/projects-section/5.jpg" alt="">
+            <img src="./project-assets/projects-section/5.jpg" alt="">
             <!-- <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis cillum minim tempor enim.
             </p> -->
         </div>
@@ -43,21 +43,21 @@
             <h3>Other Projects</h3>
             <div class="otherProjectRow">
                 <div class="otherProjectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
+                <img src="./project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
                 <a href="">Learn more</a>
             </div>
 
             <div class="otherProjectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
+                <img src="./project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
                 <a href="">Learn more</a>
             </div>
 
             <div class="otherProjectColumn">
-                <img src="/project-assets/projects-section/1.jpg" alt="">
+                <img src="./project-assets/projects-section/1.jpg" alt="">
                 <h4>Title</h4>
                 <p>Description</p>
                 <a href="">Learn more</a>
@@ -75,7 +75,7 @@
                 <p>Let us help you!</p>
                 <div class="yellowBotones">
                     <div class="espacioEmail">
-                        <img src="/project-assets/newsletter/icon/mail.svg"></img>
+                        <img src="./project-assets/newsletter/icon/mail.svg"></img>
                         <input type="email" placeholder="Enter your email.">
                     </div>
                     <button>Suscribe</button>
@@ -88,7 +88,7 @@
     <footer>
         <div class="footerContainer">
             <div class="footerLeft">
-                <img src="/project-assets//logos/circle.svg" alt="Image not found.">
+                <img src="./project-assets//logos/circle.svg" alt="Image not found.">
                 <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
             </div>
             <div class="footerRight">
@@ -109,7 +109,7 @@
     </footer>
 
 
-    <script src="/javascript/project.js"></script>
+    <script src="./javascript/project.js"></script>
     
 </body>
 </html>
