--- a/project.html
+++ b/project.html
@@ -12,9 +12,13 @@
 </head>
 <body>
 
-    <header>
+    <header class="headerNew">
         <nav class="menu">
             <img src="./project-assets/logos/circle.svg" alt="Image not found.">
+            <button class="darkModeSwitch" id="switch">
+                <span><i class="fas fa-sun"></i></span>
+                <span><i class="fas fa-moon"></i></span>
+            </button>
             <ul class="menu_items">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./project.html">Projects</a></li>
