--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
 
 
-    <header>
+    <header class="headerNew">
         <nav class="menu">
             <img src="./project-assets/logos/circle.svg" alt="Image not found.">
+            <button class="darkModeSwitch" id="switch">
+                <span><i class="fas fa-sun"></i></span>
+                <span><i class="fas fa-moon"></i></span>
+            </button>
             <ul class="menu_items">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./project.html">Projects</a></li>
@@ -65,7 +69,7 @@
 
     <section class="client">
         <div class="clientLogos">
-            <object data="./project-assets/logos/airbnb-logo.svg" alt=""></object>
+            <img src="./project-assets/logos/airbnb-logo.svg" alt="">
             <img src="./project-assets/logos/google-logo.svg" alt="">
             <img src="./project-assets/logos/microsoft-logo.svg" alt="">
             <img src="./project-assets/logos/fedex-logo.svg" alt="">
