--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 
-    <header class="headerNew">
+    <div class="headerNew">
         <nav class="menu">
             <img src="./project-assets/logos/circle.svg" alt="Image not found.">
             <button class="darkModeSwitch" id="switch">
@@ -30,7 +30,7 @@
                 <i class="fa fa-bars"></i>
             </span>
         </nav>
-    </header>
+    </div>
 
 
 
@@ -112,6 +112,9 @@
     <section class="testimonial">
 
         <div class="testimonialContainer">
+            <div class="circle1"></div>
+            <div class="circle2"></div>
+            <div class="circle3"></div>
             <div class="memojis">
                 <div class="memoji1 mem"><img src="./project-assets/testimonial-section/memoji-1.png" alt=""></div>
                 <div class="memoji2 mem"><img src="./project-assets/testimonial-section/memoji-2.png" alt=""></div>
