--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <header class="headerNew">
+    <div class="headerNew">
         <nav class="menu">
             <img src="./project-assets/logos/circle.svg" alt="Image not found.">
             <button class="darkModeSwitch" id="switch">
@@ -30,7 +30,7 @@
                 <i class="fa fa-bars"></i>
             </span>
         </nav>
-    </header>
+    </div>
 
     <section class="simplify">
 
