--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <header class="headerNew">
+    <div class="headerNew">
         <nav class="menu">
             <img src="./project-assets/logos/circle.svg" alt="Image not found.">
             <button class="darkModeSwitch" id="switch">
@@ -29,7 +29,7 @@
                 <i class="fa fa-bars"></i>
             </span>
         </nav>
-    </header>
+    </div>
 
 
 
@@ -39,24 +39,24 @@
         </div>
 
 
-        <form id="form" class="formulario">
+        <form id="form" class="formulario" name="myForm">
             <div class="formNombre fila">
                 <label>Full Name*</label><br>
-                <input id="name" type="text" placeholder="Enter your full name" required><br>
+                <input id="name" type="text" placeholder="Enter your full name" name="name"><br>
             </div>
             <div class="formMailPhone">
                 <div class="formMail fila">
                     <label>Email</label><br>
-                    <input id="email" type="email" placeholder="Enter your email address" required>
+                    <input id="email" type="text" placeholder="Enter your email address" name="email">
                 </div>
                 <div class="formPhone fila">
                     <label>Phone</label><br>
-                    <input id="tel" type="tel" placeholder="Enter your phone number" required>
+                    <input id="tel" type="tel" placeholder="Enter your phone number" name="phone">
                 </div>
             </div>
             <div class="formMessage fila">
                 <label>Message*</label><br>
-                <textarea id="message" placeholder="Write your message here...." required rows="10"></textarea>
+                <textarea id="message" placeholder="Write your message here...." name="message" rows="10"></textarea>
             </div>
 
             <div class="formBoton fila"></div>
